Reduce upper left logo size and fix Posts being overlapped with it.

--- a/RudesWebapp/wwwroot/css/site.css
+++ b/RudesWebapp/wwwroot/css/site.css
@@ -74,7 +74,7 @@ body {
 
 .my-navbar-brand {
     display: inline-block;
-    width: 9%;
+    width: 7.5%;
     height: auto;
     margin-top: 0.5%;
     margin-left: 0.5%;
